Explicitly set eventBusName in webhook and sensors

--- a/apps/base/dev-argo-tasks/deploy/events/webhook.yaml
+++ b/apps/base/dev-argo-tasks/deploy/events/webhook.yaml
@@ -3,6 +3,7 @@ kind: EventSource
 metadata:
   name: webhook
 spec:
+  eventBusName: default
   template:
     nodeSelector:
       capability/general-purpose: 'yes'
