--- a/apps/vagrant/dev-argo-workflows/sensor.yaml
+++ b/apps/vagrant/dev-argo-workflows/sensor.yaml
@@ -4,6 +4,7 @@ metadata:
   name: dev-argo-workflows
   namespace: dev-argo-tasks
 spec:
+  eventBusName: default
   template:
     serviceAccountName: operate-workflow-sa
   dependencies:
