--- a/apps/base/dev-argo-cd/deploy/base/redis/argocd-redis-deployment.yaml
+++ b/apps/base/dev-argo-cd/deploy/base/redis/argocd-redis-deployment.yaml
@@ -32,6 +32,13 @@ spec:
         - "no"
         ports:
         - containerPort: 6379
+        resources:
+          requests:
+            cpu: 25m
+            memory: 64Mi
+          limits:
+            cpu: 50m
+            memory: 64Mi
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
