--- a/apps/vagrant/dev-argo-tasks/deploy/kustomization.yaml
+++ b/apps/vagrant/dev-argo-tasks/deploy/kustomization.yaml
@@ -16,3 +16,7 @@ secretGenerator:
 
 resources:
 - ../../../base/dev-argo-tasks/deploy
+
+patches:
+- path: eventbus-resources.yaml
+- path: webhook-resources.yaml
