--- a/apps/vagrant/dev-argo-events/deploy/controller-manager-deployment-resources.yaml
+++ b/apps/vagrant/dev-argo-events/deploy/controller-manager-deployment-resources.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: argocd-server
+  name: controller-manager
 spec:
   template:
     spec:
       containers:
-        - name: argocd-server
+        - name: controller-manager
           resources:
             requests:
-              cpu: 25m
+              cpu: 50m
               memory: 64Mi
             limits:
-              cpu: 100m
+              cpu: 250m
               memory: 64Mi
