--- a/apps/vagrant/dev-argo-cd/application.yaml
+++ b/apps/vagrant/dev-argo-cd/application.yaml
@@ -4,8 +4,8 @@ metadata:
   name: dev-argo-cd
   namespace: dev-argo-cd
   # Add this finalizer ONLY if you want these to cascade delete.
-  finalizers:
-    - resources-finalizer.argocd.argoproj.io
+  #finalizers:
+  #  - resources-finalizer.argocd.argoproj.io
   labels:
     app.kubernetes.io/name: reflector
 spec:
