Configure dex ldap connector in overlay

--- a/apps/vagrant/dev-argo-cd/deploy/kustomization.yaml
+++ b/apps/vagrant/dev-argo-cd/deploy/kustomization.yaml
@@ -10,6 +10,8 @@ resources:
 configMapGenerator:
 - name: argocd-cm
   env: config/argocd.env
+  files:
+  - config/dex.config
   behavior: merge
 
 secretGenerator:
