--- a/apps/base/dev-argo-cd/deploy/config/argocd.env
+++ b/apps/base/dev-argo-cd/deploy/config/argocd.env
@@ -3,3 +3,6 @@ admin.enabled=false
 
 # Argo CD's externally facing base URL (optional). Required when configuring SSO
 url=https://my-argocd-url-changeme
+
+# Enable KSOPS
+kustomize.buildOptions=--enable-alpha-plugins --enable-exec
