--- a/apps/base/dev-argo-cd/deploy/base/application-controller/argocd-application-controller-statefulset.yaml
+++ b/apps/base/dev-argo-cd/deploy/base/application-controller/argocd-application-controller-statefulset.yaml
@@ -151,7 +151,7 @@ spec:
                 name: argocd-cmd-params-cm
                 key: controller.kubectl.parallelism.limit
                 optional: true
-        image: registry.lan/argocd:v2.7.1
+        image: registry.lan/argocd:v2.7.1-ksops
         imagePullPolicy: IfNotPresent
         name: argocd-application-controller
         ports:
