--- a/apps/base/auth-lemonldap/deploy/ingress-manager.yaml
+++ b/apps/base/auth-lemonldap/deploy/ingress-manager.yaml
@@ -2,22 +2,22 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: lemonldap-manager
-  namespace: {{ lemonldap.namespace }}
-  labels:
-    {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
-    {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
   annotations:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Auth
     gethomepage.dev/name: LemonLDAP
     gethomepage.dev/description: Web Single Sign On and Access Management
     gethomepage.dev/icon: lemonldapng
-    gethomepage.dev/href: https://lemonldap.auth.intra.{{ web_base_domain }}/manager.html
+    gethomepage.dev/href: https://lemonldap.auth.intra.web_domain_name/manager.html
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=lemonldap"
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+      - lemonldap.auth.intra.web_domain_name
+      secretName: ingress-tls
   rules:
-  - host: lemonldap.auth.intra.{{ web_base_domain }}
+  - host: lemonldap.auth.intra.web_domain_name
     http:
       paths:
       - path: /
