--- a/apps/base/auth-lemonldap/deploy/networkPolicies.yaml
+++ b/apps/base/auth-lemonldap/deploy/networkPolicies.yaml
@@ -2,16 +2,13 @@ kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-lemonldap
-  namespace: {{ lemonldap.namespace }}
-  labels:
-    {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
-    {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
   types: [Ingress]
 
   podSelector:
     matchLabels:
-      {{ lemonldap.labels_def | to_nice_yaml() | indent(6) }}
+      app.kubernetes.io/component: lemonldap
+      app.kubernetes.io/name: lemonldap
 
   ingress:
     # Allow http from the ingress controller
@@ -20,10 +17,10 @@ spec:
       from:
         - namespaceSelector:
             matchLabels:
-              {{ ingress_nginx.namespace_labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
           podSelector:
             matchLabels:
-              {{ ingress_nginx.labels_def | to_nice_yaml() | indent(14) }}
+              app.kubernetes.io/name: ingress-nginx
 
     # Allow fastcgi from all
     - ports:
