--- a/apps/vagrant/auth-lemonldap/sensor.yaml
+++ b/apps/vagrant/auth-lemonldap/sensor.yaml
@@ -34,7 +34,7 @@ spec:
           - path: "[body.commits.#.modified.#()#,body.commits.#.added.#()#,body.commits.#.removed.#()#]"
             type: string
             value:
-              - "apps/auth-lemonldap/.*"
+              - "apps/(base|vagrant)/auth-lemonldap/.*"
   triggers:
     - template:
         name: argo-workflow-trigger
