--- a/apps/vagrant/auth-lemonldap/workflow.yaml
+++ b/apps/vagrant/auth-lemonldap/workflow.yaml
@@ -12,6 +12,6 @@ spec:
       - name: base_git_repo
         value: http://gitea.dev-gitea.svc.cluster.local:3000/MyOrg/home-server.git
       - name: base_git_branch
-        value: dev/gitops
+        value: develop
   workflowTemplateRef:
     name: app-build-and-deploy
