--- a/ansible/install_applications/vars/auth-openldap.yml
+++ b/ansible/install_applications/vars/auth-openldap.yml
@@ -1,52 +1,12 @@
 ---
+# TODO : delete when all apps that are using openldap.ldap.* are migrated to kustomize
+
 # To avoid loops inside openldap
 _openldap_var_loader:
-  base_image:
-    repo: "docker.io"
-    name: "osixia/openldap"
-    tag: "1.5.0-amd64"
-  namespace: "auth-openldap"
-
   basedn: "{{ openldap_ldap_basedn | default('dc=example,dc=org') }}"
   readonly_user_username: "{{ openldap_ldap_readonly_user_username | default('readonly') }}"
 
 openldap:
-  enabled: "{{ openldap_enabled | default(True) }}"
-
-  namespace: "{{ _openldap_var_loader.namespace }}"
-  base_image: "{{ _openldap_var_loader.base_image }}"
-  private_image:
-    repo: "{{ docker_private_registry.url }}"
-    name: "{{ _openldap_var_loader.base_image.name | regex_replace('.*/', '') }}"
-    tag: "{{ _openldap_var_loader.base_image.tag }}"
-
-  app_backup:
-    name: auth-openldap
-    repository: "{{ restic_apps_backup_repository }}"
-    namespace: "{{ _openldap_var_loader.namespace }}"
-    apps_to_stop:
-      - name: openldap
-        type: statefulset
-        replicas: 1
-    longhorn_volumes:
-      - volume_name: openldap-data
-        pvc_name: openldap-data-pv-claim-openldap-0
-
-  labels_def:
-    app.kubernetes.io/name: openldap
-    app.kubernetes.io/component: openldap
-
-  labels_desc:
-    app.kubernetes.io/version: "{{ _openldap_var_loader.base_image.tag }}"
-
-  container:
-    requests_cpu: "{{ openldap_container_requests_cpu | default('50m') }}"
-    requests_memory: "{{ openldap_container_requests_memory | default('128Mi') }}"
-    limits_cpu: "{{ openldap_container_limits_cpu | default('150m') }}"
-    limits_memory: "{{ openldap_container_limits_memory | default('128Mi') }}"
-    storage:
-      data: "{{ openldap_container_storage_data | default('256M') }}"
-
   ldap:
     servername: "{{ openldap_ldap_servername | default('openldap.' + _openldap_var_loader.namespace + '.svc.cluster.local') }}"
     organisation: "{{ openldap_ldap_organisation | default('Example Inc.') }}"
