--- a/ansible/install_applications_new/site.yml
+++ b/ansible/install_applications_new/site.yml
@@ -9,4 +9,5 @@
     - { role: dev-argo-events,               tags: kubernetes-app-dev-argo-events,               when: argo_events_enabled | bool }
     - { role: dev-argo-cd,                   tags: kubernetes-app-dev-argo-cd,                   when: argo_cd_enabled | bool }
     - { role: dev-argo-tasks,                tags: kubernetes-app-dev-argo-tasks,                when: argo_tasks_enabled | bool }
+    - { role: auth-openldap,                 tags: kubernetes-app-auth-lemonldap,                when: openldap_enabled | bool }
     - { role: auth-lemonldap,                tags: kubernetes-app-auth-lemonldap,                when: lemonldap_enabled | bool }
